# claudeye

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.ko.md  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-issue-link.yml  release.yml
Formula/: claudeye.rb
claudeye/: __init__.py  __main__.py  cli.py
claudeye/analyze/: advice.py  aggregate.py  summary.py
claudeye/domain/: events.py  stats.py  usage.py
claudeye/ingest/: __init__.py  cache.py  parser.py  settings.py  source.py  timeutil.py
claudeye/ingest/claude/: __init__.py  parser.py  source.py
claudeye/ingest/codex/: __init__.py  parser.py  source.py
claudeye/render/: __init__.py  datadir.py  html.py  strings.py  template.py
commands/: claudeye-report.md
docs/: architecture.md  concept.md
tests/: test_analyzer.py
tests/fixtures/codex/archived_sessions/: rollout-2026-07-03T10-00-00-testsession0001.jsonl
tests/fixtures/projects/-Users-tester-api/: 22222222-2222-4222-8222-222222222222.jsonl
tests/fixtures/projects/-Users-tester-api/22222222-2222-4222-8222-222222222222/subagents/: agent-abc123def456.jsonl
tests/fixtures/projects/-Users-tester-webapp/: 11111111-1111-4111-8111-111111111111.jsonl  33333333-3333-4333-8333-333333333333.jsonl
(+1 files in other folders)
